2017-04-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_search_in_node_internal): Always save
	the updated match state for a window.

2017-04-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/search.c (match_in_match_list): Combine code for 
	searching backwards and forwards, and do not get all the matches 
	in the node if searching backwards.

2017-04-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/file-index-colons.sh: New test of reading an index 
	entry with a colon.

2017-04-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/display.c (display_update_one_window): Update modeline 
	before anything else.

2017-04-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (scan_reference_label): If inside an index 
	node, scan forward to the last colon on the line to get the
	index entry, instead of the first colon.

2017-04-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (do_index_keys): Strip '-', '\',
	'<', '@' if there has been @set txiindexhyphenignore,
	txiindexbackslashignore, txiindexlessthanignore,
	or txiindexatsignignore respectively.

2017-04-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (%command_ignore_space_after): Add 
	'sortas', in order to ignore spaces after its argument.

2017-04-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi) <@sortas>: Check if inside 
	index entry differently.

2017-04-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/09indices.t (explicit_sort_key): New test.

2017-04-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi) <close brace, @sortas>: Set 
	'sortas' value on index entry element.
	(_enter_index_entry): Set 'sortas' value on index entry from 
	'extra' value on element.

	* tp/Texinfo/Structuring.pm (_do_index_keys): Check for 'sortas' 
	value on index entry and, if present, use that as the sort key 
	instead of using the text of the index entry.
